--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "@types/node": "^17.0.12",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.25.0",
     "bootswatch": "^5.1.3",
     "decimal.js": "^10.3.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
@@ -32,7 +35,10 @@
     "format": "prettier --write \"{,!(node_modules)/**/}*.js\""
   },
   "eslintConfig": {
-    "extends": "@imaginary-cloud/react"
+    "extends": "@imaginary-cloud/react",
+    "rules": {
+      "react/prop-types": 0
+    }
   },
   "prettier": "@imaginary-cloud/prettier-config",
   "browserslist": {
